Replace SubscriptionCapacity with SubscriptionMeasurements
Records in subscription_capacity had several issues: denormalized data
(sku, SLA, usage), limited metric storage (only cores and sockets), and
the necessity of a mostly redundant view.  The new
subscription_measurement table (and associated model and business
logic), creates referential integrity between itself and the
subscription table; allows for a completely flexible handling of any
metric and measurement type combination; and does not require any
additional views.

See https://issues.redhat.com/browse/SWATCH-1202