@@ -22,22 +22,22 @@ package org.candlepin.subscriptions.resource;
 
 import static org.candlepin.subscriptions.utilization.api.model.ProductId.RHEL;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.junit.jupiter.params.provider.Arguments.arguments;
 import static org.mockito.Mockito.*;
 
 import java.time.OffsetDateTime;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Stream;
 import javax.ws.rs.core.Response;
 import org.candlepin.subscriptions.db.AccountConfigRepository;
 import org.candlepin.subscriptions.db.HypervisorReportCategory;
-import org.candlepin.subscriptions.db.SubscriptionCapacityRepository;
+import org.candlepin.subscriptions.db.SubscriptionMeasurementRepository;
+import org.candlepin.subscriptions.db.SubscriptionRepository;
+import org.candlepin.subscriptions.db.model.DbReportCriteria;
 import org.candlepin.subscriptions.db.model.Granularity;
 import org.candlepin.subscriptions.db.model.ServiceLevel;
-import org.candlepin.subscriptions.db.model.SubscriptionCapacity;
+import org.candlepin.subscriptions.db.model.Subscription;
+import org.candlepin.subscriptions.db.model.SubscriptionMeasurement;
+import org.candlepin.subscriptions.db.model.SubscriptionProductId;
 import org.candlepin.subscriptions.db.model.Usage;
 import org.candlepin.subscriptions.exception.SubscriptionsException;
 import org.candlepin.subscriptions.resteasy.PageLinkCreator;
@@ -53,9 +53,6 @@ import org.candlepin.subscriptions.utilization.api.model.ServiceLevelType;
 import org.candlepin.subscriptions.utilization.api.model.UsageType;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -70,10 +67,9 @@ class CapacityResourceTest {
   private static final OffsetDateTime min = OffsetDateTime.now().minusDays(4);
   private static final OffsetDateTime max = OffsetDateTime.now().plusDays(4);
 
-  @MockBean SubscriptionCapacityRepository repository;
-
+  @MockBean SubscriptionMeasurementRepository repository;
+  @MockBean SubscriptionRepository subscriptionRepository;
   @MockBean PageLinkCreator pageLinkCreator;
-
   @MockBean AccountConfigRepository accountConfigRepository;
 
   @Autowired CapacityResource resource;
@@ -83,15 +79,55 @@ class CapacityResourceTest {
     when(accountConfigRepository.existsByOrgId("owner123456")).thenReturn(true);
   }
 
+  private static Subscription datedSubscription(OffsetDateTime start, OffsetDateTime end) {
+    Subscription s =
+        Subscription.builder()
+            .subscriptionId("subscription123")
+            .startDate(start)
+            .endDate(end)
+            .orgId("owner123456")
+            .build();
+
+    s.addSubscriptionProductId(SubscriptionProductId.builder().productId(RHEL.toString()).build());
+    s.addSubscriptionMeasurement(basicMeasurement());
+
+    return s;
+  }
+
+  private static Subscription enhancedSubscription(List<SubscriptionMeasurement> measurements) {
+    Subscription s =
+        Subscription.builder()
+            .startDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1))
+            .endDate(max.truncatedTo(ChronoUnit.DAYS).minusSeconds(1))
+            .orgId("owner123456")
+            .build();
+
+    s.addSubscriptionProductId(SubscriptionProductId.builder().productId(RHEL.toString()).build());
+    s.addSubscriptionMeasurements(measurements);
+    return s;
+  }
+
+  SubscriptionMeasurement createMeasurement(String type, MetricId metric, double value) {
+    return SubscriptionMeasurement.builder()
+        .measurementType(type)
+        .metricId(metric.toString())
+        .value(value)
+        .build();
+  }
+
+  private static SubscriptionMeasurement basicMeasurement() {
+    return SubscriptionMeasurement.builder()
+        .measurementType("PHYSICAL")
+        .metricId("CORES")
+        .value(42.0)
+        .build();
+  }
+
   @Test
   void testShouldUseQueryBasedOnHeaderAndParameters() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), ServiceLevel._ANY, Usage._ANY, min, max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReport report =
         resource.getCapacityReport(RHEL, GranularityType.DAILY, min, max, null, null, null, null);
@@ -101,13 +137,9 @@ class CapacityResourceTest {
 
   @Test
   void testShouldUseSlaQueryParam() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), ServiceLevel.PREMIUM, Usage._ANY, min, max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReport report =
         resource.getCapacityReport(
@@ -118,13 +150,9 @@ class CapacityResourceTest {
 
   @Test
   void testShouldUseUsageQueryParam() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), ServiceLevel._ANY, Usage.PRODUCTION, min, max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReport report =
         resource.getCapacityReport(
@@ -135,13 +163,9 @@ class CapacityResourceTest {
 
   @Test
   void testShouldTreatEmptySlaAsNull() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), ServiceLevel._ANY, Usage._ANY, min, max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReport report =
         resource.getCapacityReport(
@@ -152,13 +176,9 @@ class CapacityResourceTest {
 
   @Test
   void testShouldTreatEmptyUsageAsNull() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), ServiceLevel._ANY, Usage._ANY, min, max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReport report =
         resource.getCapacityReport(
@@ -169,24 +189,32 @@ class CapacityResourceTest {
 
   @Test
   void testShouldCalculateCapacityBasedOnMultipleSubscriptions() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHypervisorSockets(5);
-    capacity.setSockets(2);
-    capacity.setHypervisorCores(20);
-    capacity.setCores(8);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    var hypSock1 = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 5.0);
+    var hypSock2 = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 7.0);
 
-    SubscriptionCapacity capacity2 = new SubscriptionCapacity();
-    capacity2.setHypervisorSockets(7);
-    capacity2.setSockets(11);
-    capacity2.setHypervisorCores(14);
-    capacity2.setCores(22);
-    capacity2.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity2.setEndDate(max);
+    var hypCore1 = createMeasurement("HYPERVISOR", MetricId.CORES, 20.0);
+    var hypCore2 = createMeasurement("HYPERVISOR", MetricId.CORES, 14.0);
+
+    var sock1 = createMeasurement("PHYSICAL", MetricId.SOCKETS, 2.0);
+    var sock2 = createMeasurement("PHYSICAL", MetricId.SOCKETS, 11.0);
+
+    var cores1 = createMeasurement("PHYSICAL", MetricId.CORES, 8.0);
+    var cores2 = createMeasurement("PHYSICAL", MetricId.CORES, 22.0);
+
+    Subscription s =
+        Subscription.builder()
+            .startDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1))
+            .endDate(max.truncatedTo(ChronoUnit.DAYS).minusSeconds(1))
+            .orgId("owner123456")
+            .build();
+
+    s.addSubscriptionProductId(SubscriptionProductId.builder().productId(RHEL.toString()).build());
+    List<SubscriptionMeasurement> measurements =
+        List.of(sock1, sock2, cores1, cores2, hypSock1, hypSock2, hypCore1, hypCore2);
+    s.addSubscriptionMeasurements(measurements);
 
     when(repository.findAllBy("owner123456", RHEL.toString(), null, null, min, max))
-        .thenReturn(Arrays.asList(capacity, capacity2));
+        .thenReturn(measurements);
 
     CapacityReport report =
         resource.getCapacityReport(RHEL, GranularityType.DAILY, min, max, null, null, null, null);
@@ -211,13 +239,9 @@ class CapacityResourceTest {
 
   @Test
   void testShouldRespectOffsetAndLimit() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), ServiceLevel._ANY, Usage._ANY, min, max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReport report =
         resource.getCapacityReport(RHEL, GranularityType.DAILY, min, max, 1, 1, null, null);
@@ -252,15 +276,13 @@ class CapacityResourceTest {
 
   @Test
   void testGetCapacitiesWeekly() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
     OffsetDateTime begin = OffsetDateTime.parse("2020-12-03T10:15:30+00:00");
     OffsetDateTime end = OffsetDateTime.parse("2020-12-17T10:15:30+00:00");
-    capacity.setBeginDate(begin);
-    capacity.setEndDate(end);
+    var subscription = datedSubscription(begin, end);
 
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), ServiceLevel._ANY, Usage.PRODUCTION, begin, end))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(subscription.getSubscriptionMeasurements());
 
     List<CapacitySnapshot> actual =
         resource.getCapacities(
@@ -279,26 +301,21 @@ class CapacityResourceTest {
 
   @Test
   void testShouldCalculateCapacityWithUnlimitedUsage() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHasUnlimitedUsage(true);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    OffsetDateTime begin = min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1);
+    var subscription = datedSubscription(begin, max);
+    subscription.setHasUnlimitedUsage(true);
+
+    DbReportCriteria criteria =
+        DbReportCriteria.builder()
+            .orgId("owner123456")
+            .productId(RHEL.toString())
+            .beginning(min)
+            .ending(max)
+            .build();
+    when(subscriptionRepository.findUnlimited(criteria)).thenReturn(List.of(subscription));
 
     when(repository.findAllBy("owner123456", RHEL.toString(), null, null, min, max))
-        .thenReturn(Arrays.asList(capacity));
-
-    CapacityReport report =
-        resource.getCapacityReport(RHEL, GranularityType.DAILY, min, max, null, null, null, null);
-
-    CapacitySnapshot capacitySnapshot = report.getData().get(0);
-    assertTrue(capacitySnapshot.getHasInfiniteQuantity());
-  }
-
-  @ParameterizedTest
-  @MethodSource("usageLists")
-  void testShouldCalculateCapacityRegardlessOfUsageSeenFirst(List<SubscriptionCapacity> usages) {
-    when(repository.findAllBy("owner123456", RHEL.toString(), null, null, min, max))
-        .thenReturn(usages);
+        .thenReturn(subscription.getSubscriptionMeasurements());
 
     CapacityReport report =
         resource.getCapacityReport(RHEL, GranularityType.DAILY, min, max, null, null, null, null);
@@ -309,10 +326,6 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldUseQueryBasedOnHeaderAndParameters() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456",
             RHEL.toString(),
@@ -322,7 +335,7 @@ class CapacityResourceTest {
             Usage._ANY,
             min,
             max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -342,10 +355,6 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldUseSlaQueryParam() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456",
             RHEL.toString(),
@@ -355,7 +364,7 @@ class CapacityResourceTest {
             Usage._ANY,
             min,
             max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -375,10 +384,6 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldUseUsageQueryParam() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456",
             RHEL.toString(),
@@ -388,7 +393,7 @@ class CapacityResourceTest {
             Usage.PRODUCTION,
             min,
             max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -408,10 +413,6 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldTreatEmptySlaAsNull() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456",
             RHEL.toString(),
@@ -421,7 +422,7 @@ class CapacityResourceTest {
             Usage._ANY,
             min,
             max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -441,10 +442,6 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldTreatEmptyUsageAsNull() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456",
             RHEL.toString(),
@@ -454,7 +451,7 @@ class CapacityResourceTest {
             Usage._ANY,
             min,
             max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -474,25 +471,25 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldCalculateCapacityBasedOnMultipleSubscriptions() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHypervisorSockets(5);
-    capacity.setSockets(2);
-    capacity.setHypervisorCores(20);
-    capacity.setCores(8);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    var hypSock1 = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 5.0);
+    var hypSock2 = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 7.0);
 
-    SubscriptionCapacity capacity2 = new SubscriptionCapacity();
-    capacity2.setHypervisorSockets(7);
-    capacity2.setSockets(11);
-    capacity2.setHypervisorCores(14);
-    capacity2.setCores(22);
-    capacity2.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity2.setEndDate(max);
+    var hypCore1 = createMeasurement("HYPERVISOR", MetricId.CORES, 20.0);
+    var hypCore2 = createMeasurement("HYPERVISOR", MetricId.CORES, 14.0);
+
+    var sock1 = createMeasurement("PHYSICAL", MetricId.SOCKETS, 2.0);
+    var sock2 = createMeasurement("PHYSICAL", MetricId.SOCKETS, 11.0);
+
+    var cores1 = createMeasurement("PHYSICAL", MetricId.CORES, 8.0);
+    var cores2 = createMeasurement("PHYSICAL", MetricId.CORES, 22.0);
+
+    List<SubscriptionMeasurement> measurements =
+        List.of(sock1, sock2, cores1, cores2, hypSock1, hypSock2, hypCore1, hypCore2);
+    enhancedSubscription(measurements);
 
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), MetricId.CORES, null, null, null, min, max))
-        .thenReturn(Arrays.asList(capacity, capacity2));
+        .thenReturn(measurements);
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -504,17 +501,17 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldCalculateCapacityAllSockets() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHypervisorSockets(5);
-    capacity.setSockets(2);
-    capacity.setHypervisorCores(20);
-    capacity.setCores(8);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    var hypSock = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 5.0);
+    var hypCore = createMeasurement("HYPERVISOR", MetricId.CORES, 20.0);
+    var sock = createMeasurement("PHYSICAL", MetricId.SOCKETS, 2.0);
+    var cores = createMeasurement("PHYSICAL", MetricId.CORES, 8.0);
+
+    List<SubscriptionMeasurement> measurements = List.of(sock, cores, hypCore, hypSock);
+    enhancedSubscription(measurements);
 
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), MetricId.SOCKETS, null, null, null, min, max))
-        .thenReturn(Arrays.asList(capacity));
+        .thenReturn(measurements);
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -526,13 +523,13 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldCalculateCapacityVirtualSockets() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHypervisorSockets(5);
-    capacity.setSockets(2);
-    capacity.setHypervisorCores(20);
-    capacity.setCores(8);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    var hypSock = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 5.0);
+    var hypCore = createMeasurement("HYPERVISOR", MetricId.CORES, 20.0);
+    var sock = createMeasurement("PHYSICAL", MetricId.SOCKETS, 2.0);
+    var cores = createMeasurement("PHYSICAL", MetricId.CORES, 8.0);
+
+    List<SubscriptionMeasurement> measurements = List.of(sock, cores, hypCore, hypSock);
+    enhancedSubscription(measurements);
 
     when(repository.findAllBy(
             "owner123456",
@@ -543,7 +540,7 @@ class CapacityResourceTest {
             null,
             min,
             max))
-        .thenReturn(Arrays.asList(capacity));
+        .thenReturn(measurements);
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -564,13 +561,13 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldCalculateCapacityPhysicalSockets() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHypervisorSockets(5);
-    capacity.setSockets(2);
-    capacity.setHypervisorCores(20);
-    capacity.setCores(8);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    var hypSock = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 5.0);
+    var hypCore = createMeasurement("HYPERVISOR", MetricId.CORES, 20.0);
+    var sock = createMeasurement("PHYSICAL", MetricId.SOCKETS, 2.0);
+    var cores = createMeasurement("PHYSICAL", MetricId.CORES, 8.0);
+
+    List<SubscriptionMeasurement> measurements = List.of(sock, cores, hypCore, hypSock);
+    enhancedSubscription(measurements);
 
     when(repository.findAllBy(
             "owner123456",
@@ -581,7 +578,7 @@ class CapacityResourceTest {
             null,
             min,
             max))
-        .thenReturn(Arrays.asList(capacity));
+        .thenReturn(measurements);
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -602,17 +599,17 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldCalculateCapacityAllCores() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHypervisorSockets(5);
-    capacity.setSockets(2);
-    capacity.setHypervisorCores(20);
-    capacity.setCores(8);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    var hypSock = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 5.0);
+    var hypCore = createMeasurement("HYPERVISOR", MetricId.CORES, 20.0);
+    var sock = createMeasurement("PHYSICAL", MetricId.SOCKETS, 2.0);
+    var cores = createMeasurement("PHYSICAL", MetricId.CORES, 8.0);
+
+    List<SubscriptionMeasurement> measurements = List.of(sock, cores, hypCore, hypSock);
+    enhancedSubscription(measurements);
 
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), MetricId.CORES, null, null, null, min, max))
-        .thenReturn(Arrays.asList(capacity));
+        .thenReturn(measurements);
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -624,13 +621,13 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldCalculateCapacityVirtualCores() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHypervisorSockets(5);
-    capacity.setSockets(2);
-    capacity.setHypervisorCores(20);
-    capacity.setCores(8);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    var hypSock = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 5.0);
+    var hypCore = createMeasurement("HYPERVISOR", MetricId.CORES, 20.0);
+    var sock = createMeasurement("PHYSICAL", MetricId.SOCKETS, 2.0);
+    var cores = createMeasurement("PHYSICAL", MetricId.CORES, 8.0);
+
+    List<SubscriptionMeasurement> measurements = List.of(sock, cores, hypCore, hypSock);
+    enhancedSubscription(measurements);
 
     when(repository.findAllBy(
             "owner123456",
@@ -641,7 +638,7 @@ class CapacityResourceTest {
             null,
             min,
             max))
-        .thenReturn(Arrays.asList(capacity));
+        .thenReturn(measurements);
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -662,13 +659,13 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldCalculateCapacityPhysicalCores() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setHypervisorSockets(5);
-    capacity.setSockets(2);
-    capacity.setHypervisorCores(20);
-    capacity.setCores(8);
-    capacity.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    capacity.setEndDate(max);
+    var hypSock = createMeasurement("HYPERVISOR", MetricId.SOCKETS, 5.0);
+    var hypCore = createMeasurement("HYPERVISOR", MetricId.CORES, 20.0);
+    var sock = createMeasurement("PHYSICAL", MetricId.SOCKETS, 2.0);
+    var cores = createMeasurement("PHYSICAL", MetricId.CORES, 8.0);
+
+    List<SubscriptionMeasurement> measurements = List.of(sock, cores, hypCore, hypSock);
+    enhancedSubscription(measurements);
 
     when(repository.findAllBy(
             "owner123456",
@@ -679,7 +676,7 @@ class CapacityResourceTest {
             null,
             min,
             max))
-        .thenReturn(Arrays.asList(capacity));
+        .thenReturn(measurements);
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -712,10 +709,6 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdShouldRespectOffsetAndLimit() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
-    capacity.setBeginDate(min);
-    capacity.setEndDate(max);
-
     when(repository.findAllBy(
             "owner123456",
             RHEL.toString(),
@@ -725,7 +718,7 @@ class CapacityResourceTest {
             Usage._ANY,
             min,
             max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(List.of(basicMeasurement()));
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -763,11 +756,9 @@ class CapacityResourceTest {
 
   @Test
   void testReportByMetricIdGetCapacitiesWeekly() {
-    SubscriptionCapacity capacity = new SubscriptionCapacity();
     OffsetDateTime begin = OffsetDateTime.parse("2020-12-03T10:15:30+00:00");
     OffsetDateTime end = OffsetDateTime.parse("2020-12-17T10:15:30+00:00");
-    capacity.setBeginDate(begin);
-    capacity.setEndDate(end);
+    var s = datedSubscription(begin, end);
 
     when(repository.findAllBy(
             "owner123456",
@@ -778,7 +769,7 @@ class CapacityResourceTest {
             Usage.PRODUCTION,
             min,
             max))
-        .thenReturn(Collections.singletonList(capacity));
+        .thenReturn(s.getSubscriptionMeasurements());
 
     List<CapacitySnapshotByMetricId> actual =
         resource.getCapacitiesByMetricId(
@@ -797,13 +788,31 @@ class CapacityResourceTest {
     assertEquals(expected, actual.size());
   }
 
-  @ParameterizedTest
-  @MethodSource("usageLists")
-  void testReportByMetricIdShouldCalculateCapacityRegardlessOfUsageSeenFirst(
-      List<SubscriptionCapacity> usages) {
+  void testReportByMetricIdShouldCalculateCapacityEvenWhenUnlimited() {
+    var begin = min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1);
+    var unlimited = datedSubscription(begin, max);
+    unlimited.setHasUnlimitedUsage(true);
+    unlimited.setSubscriptionId("unlimited123");
+
+    var limited = datedSubscription(begin, max);
+    limited.setHasUnlimitedUsage(false);
+    limited.setSubscriptionId("limited123");
+    limited.setSubscriptionMeasurements(
+        List.of(createMeasurement("PHYSICAL", MetricId.CORES, 4.0)));
+
     when(repository.findAllBy(
             "owner123456", RHEL.toString(), MetricId.CORES, null, null, null, min, max))
-        .thenReturn(usages);
+        .thenReturn(limited.getSubscriptionMeasurements());
+
+    var criteria =
+        DbReportCriteria.builder()
+            .orgId("owner123456")
+            .productId(RHEL.toString())
+            .beginning(min)
+            .ending(max)
+            .build();
+
+    when(subscriptionRepository.findUnlimited(criteria)).thenReturn(List.of(unlimited));
 
     CapacityReportByMetricId report =
         resource.getCapacityReportByMetricId(
@@ -811,20 +820,5 @@ class CapacityResourceTest {
 
     CapacitySnapshotByMetricId capacitySnapshot = report.getData().get(0);
     assertEquals(4, capacitySnapshot.getValue());
-  }
-
-  static Stream<Arguments> usageLists() {
-    SubscriptionCapacity limited = new SubscriptionCapacity();
-    limited.setHasUnlimitedUsage(false);
-    limited.setCores(4);
-    limited.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    limited.setEndDate(max);
-    SubscriptionCapacity unlimited = new SubscriptionCapacity();
-    unlimited.setHasUnlimitedUsage(true);
-    unlimited.setBeginDate(min.truncatedTo(ChronoUnit.DAYS).minusSeconds(1));
-    unlimited.setEndDate(max);
-
-    return Stream.of(
-        arguments(Arrays.asList(unlimited, limited)), arguments(Arrays.asList(limited, unlimited)));
   }
 }
